--- a/fingertip/src/main/res/values/strings.xml
+++ b/fingertip/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="sign_in">Sign In</string>
     <string name="confirm_fingerprint_to_continue">Confirm fingerprint to continue.</string>
     <string name="touch_sensor">Touch sensor</string>
+    <string name="auth_success_message">Authentication Successful</string>
 </resources>
