--- a/fingertip/src/main/res/values/strings.xml
+++ b/fingertip/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">Easy Fingerprint</string>
     <string name="cancel">Cancel</string>
-    <string name="sign_in">Sign In</string>
+    <string name="sign_in">Fingerprint sign in</string>
     <string name="confirm_fingerprint_to_continue">Confirm fingerprint to continue.</string>
     <string name="touch_sensor">Touch sensor</string>
     <string name="auth_success_message">Authentication Successful</string>
+    <string name="too_many_attempts">Too many attempts</string>
 </resources>
