--- a/janus-authenticator/src/main/res/values/strings.xml
+++ b/janus-authenticator/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="confirm_fingerprint_to_continue">Confirm fingerprint to continue.</string>
     <string name="touch_sensor">Touch sensor</string>
     <string name="auth_success_message">Authentication Successful</string>
-    <string name="no_fp">Either device not support fingerprint or no fingerprint added</string>
+    <string name="no_biometrics">Either device not support biometric or no biometrics added</string>
+    <string name="fingerprint_auth_failed">Fingerprint not recognized. Try again</string>
 </resources>
